welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if (a<=b || b<=c || a=b=c || a<b<c) {return true}
                                 ^inOrderEqual:5: error: type mismatch;
 found   : Int
 required: Boolean
		else {if(a<b<c) {return true}
                             ^